syntax = "proto3";

package model;

option go_package = "github.com/tislib/apibrew/pkg/model";

import 'google/protobuf/struct.proto';
import 'google/protobuf/timestamp.proto';

enum EventType {
  CREATE = 0;
  UPDATE = 1;
  DELETE = 2;
  GET = 3;
  LIST = 4;
}

message WatchMessage {
  google.protobuf.Struct changes = 4;
  repeated string recordIds = 1;
  EventType event = 2;
  google.protobuf.Timestamp event_on = 3;
}
